--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>AdminLTE 2 | Calendar</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
@@ -8,106 +8,50 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome Icons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Ionicons -->
-    <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- fullCalendar 2.2.5-->
     <link href="plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css" />
     <link href="plugins/fullcalendar/fullcalendar.print.css" rel="stylesheet" type="text/css" media='print' />
-    <!-- Theme style -->
+    <!-- AdminLTE style -->
     <link href="dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <!-- AdminLTE Skins -->
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body class="skin-blue">
+</head>
+<body class="skin-blue">
     <div class="wrapper">
-      <!-- Right side column. Contains the navbar and content of the page -->
-      <div class="content-wrapper">
-        <!-- Content Header -->
-        <section class="content-header">
-          <h1>
-            Calendar
-            <small>Control panel</small>
-          </h1>
-          <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Calendar</li>
-          </ol>
-        </section>
-
-        <!-- Main content -->
-        <section class="content">
-          <div class="row">
-            <div class="col-md-3">
-              <div class="box box-solid">
-                <div class="box-header with-border">
-                  <h4 class="box-title">Draggable Events</h4>
-                </div>
-                <div class="box-body">
-                  <!-- the events -->
-                  <div id='external-events'>
-                    <div class='external-event bg-green'>Lunch</div>
-                    <div class='external-event bg-yellow'>Go home</div>
-                    <div class='external-event bg-aqua'>Do homework</div>
-                    <div class='external-event bg-light-blue'>Work on UI design</div>
-                    <div class='external-event bg-red'>Sleep tight</div>
-                    <div class="checkbox">
-                      <label for='drop-remove'>
-                        <input type='checkbox' id='drop-remove' />
-                        remove after drop
-                      </label>
+        <div class="content-wrapper">
+            <section class="content-header">
+                <h1>Calendar <small>Control panel</small></h1>
+            </section>
+            <section class="content">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="box box-solid">
+                            <div class="box-header with-border">
+                                <h4 class="box-title">Draggable Events</h4>
+                            </div>
+                            <div class="box-body">
+                                <div id='external-events'>
+                                    <div class='external-event bg-green'>Lunch</div>
+                                    <div class='external-event bg-yellow'>Go home</div>
+                                    <div class='external-event bg-aqua'>Do homework</div>
+                                    <div class='external-event bg-light-blue'>Work on UI design</div>
+                                    <div class='external-event bg-red'>Sleep tight</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                </div><!-- /.box-body -->
-              </div><!-- /. box -->
-              <div class="box box-solid">
-                <div class="box-header with-border">
-                  <h3 class="box-title">Create Event</h3>
+
+                    <div class="col-md-9">
+                        <div class="box box-primary">
+                            <div class="box-body no-padding">
+                                <div id="calendar"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="box-body">
-                  <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
-                    <ul class="fc-color-picker" id="color-chooser">
-                      <li><a class="text-aqua" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-blue" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-light-blue" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-teal" href="#"><i class="fa fa-square"></i></a></li>   
-                      <li><a class="text-yellow" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-orange" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-green" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-lime" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-red" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-purple" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-fuchsia" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-muted" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-navy" href="#"><i class="fa fa-square"></i></a></li>
-                    </ul>
-                  </div><!-- /btn-group -->
-                  <div class="input-group">
-                    <input id="new-event" type="text" class="form-control" placeholder="Event Title">
-                    <div class="input-group-btn">
-                      <button id="add-new-event" type="button" class="btn btn-primary btn-flat">Add</button>
-                    </div><!-- /btn-group -->
-                  </div><!-- /input-group -->
-                </div>
-              </div>
-            </div><!-- /.col -->
-            <div class="col-md-9">
-              <div class="box box-primary">
-                <div class="box-body no-padding">
-                  <!-- THE CALENDAR -->
-                  <div id="calendar"></div>
-                </div><!-- /.box-body -->
-              </div><!-- /. box -->
-            </div><!-- /.col -->
-          </div><!-- /.row -->
-        </section><!-- /.content -->
-      </div><!-- /.content-wrapper -->
-      <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-          <b>Version</b> 2.0
+            </section>
         </div>
-        <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
-      </footer>
-    </div><!-- ./wrapper -->
+    </div>
 
     <!-- jQuery 2.1.3 -->
     <script src="plugins/jQuery/jQuery-2.1.3.min.js"></script>
@@ -115,130 +59,99 @@
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- jQuery UI 1.11.1 -->
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js" type="text/javascript"></script>
-    <!-- Slimscroll -->
-    <script src="plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-    <!-- FastClick -->
-    <script src='plugins/fastclick/fastclick.min.js'></script>
-    <!-- AdminLTE App -->
-    <script src="dist/js/app.min.js" type="text/javascript"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="dist/js/demo.js" type="text/javascript"></script>
     <!-- fullCalendar 2.2.5 -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
     <script src="plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
 
-    <!-- Page specific script -->
     <script type="text/javascript">
-      $(function () {
-        // Inicializar os eventos externos
-        function ini_events(ele) {
-          ele.each(function () {
-            var eventObject = {
-              title: $.trim($(this).text()) // Obtem o título do evento
-            };
-            $(this).data('eventObject', eventObject);
-            $(this).draggable({
-              zIndex: 1070,
-              revert: true,      // Quando o evento não for solto, ele retorna à posição original
-              revertDuration: 0  // Não há demora
+        $(function () {
+            function ini_events(ele) {
+                ele.each(function () {
+                    var eventObject = {
+                        title: $.trim($(this).text())
+                    };
+                    $(this).data('eventObject', eventObject);
+                    $(this).draggable({
+                        zIndex: 1070,
+                        revert: true,
+                        revertDuration: 0
+                    });
+                });
+            }
+            ini_events($('#external-events div.external-event'));
+
+            $('#calendar').fullCalendar({
+                header: {
+                    left: 'prev,next today',
+                    center: 'title',
+                    right: 'month,agendaWeek,agendaDay'
+                },
+                editable: true,
+                droppable: true,
+                events: function(start, end, timezone, callback) {
+                    $.ajax({
+                        url: 'calendar_api.php',
+                        type: 'GET',
+                        success: function(data) {
+                            callback(data);
+                        }
+                    });
+                },
+                drop: function(date, allDay) {
+                    var originalEventObject = $(this).data('eventObject');
+                    var copiedEventObject = {
+                        title: originalEventObject.title,
+                        start: date.format(),
+                        allDay: allDay,
+                        backgroundColor: $(this).css("background-color"),
+                        borderColor: $(this).css("border-color")
+                    };
+
+                    $.ajax({
+                        url: 'calendar_api.php',
+                        type: 'POST',
+                        data: JSON.stringify({
+                            title: copiedEventObject.title,
+                            start: copiedEventObject.start,
+                            allDay: copiedEventObject.allDay,
+                            backgroundColor: copiedEventObject.backgroundColor,
+                            borderColor: copiedEventObject.borderColor
+                        }),
+                        contentType: 'application/json',
+                        success: function(response) {
+                            copiedEventObject.id = response.id;
+                            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
+                        },
+                        error: function(xhr, status, error) {
+                            alert("Erro ao adicionar evento.");
+                        }
+                    });
+                },
+                eventDrop: function(event, delta, revertFunc) {
+                    $.ajax({
+                        url: 'calendar_api.php',
+                        type: 'POST',
+                        data: JSON.stringify({
+                            id: event.id,
+                            title: event.title,
+                            start: event.start.format(),
+                            end: event.end ? event.end.format() : null,
+                            allDay: event.allDay,
+                            backgroundColor: event.backgroundColor,
+                            borderColor: event.borderColor
+                        }),
+                        contentType: 'application/json',
+                        success: function(response) {
+                            console.log("Evento atualizado com sucesso.");
+                        },
+                        error: function(xhr, status, error) {
+                            revertFunc();
+                            alert("Erro ao atualizar o evento.");
+                        }
+                    });
+                }
             });
-          });
-        }
-        ini_events($('#external-events div.external-event'));
-
-        // Inicializar o calendário
-        $('#calendar').fullCalendar({
-          header: {
-            left: 'prev,next today',
-            center: 'title',
-            right: 'month,agendaWeek,agendaDay'
-          },
-          editable: true,
-          droppable: true,
-
-          // Carregar eventos do banco via AJAX
-          events: function(start, end, timezone, callback) {
-            $.ajax({
-              url: 'calendar_api.php',
-              type: 'GET',
-              success: function(data) {
-                callback(data); // Envia eventos para o calendário
-              }
-            });
-          },
-
-          // Adicionar evento ao soltar um item
-          drop: function(date, allDay) {
-            var originalEventObject = $(this).data('eventObject');
-            var copiedEventObject = {
-              title: originalEventObject.title,
-              start: date.format(),
-              allDay: allDay,
-              backgroundColor: $(this).css("background-color"),
-              borderColor: $(this).css("border-color")
-            };
-
-            // Enviar evento para o banco via AJAX
-            $.ajax({
-              url: 'calendar_api.php',
-              type: 'POST',
-              data: JSON.stringify({
-                title: copiedEventObject.title,
-                start: copiedEventObject.start,
-                allDay: copiedEventObject.allDay,
-                backgroundColor: copiedEventObject.backgroundColor,
-                borderColor: copiedEventObject.borderColor
-              }),
-              contentType: 'application/json',
-              success: function(response) {
-                copiedEventObject.id = response.id;
-                $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-              }
-            });
-          },
-
-          // Atualizar evento quando ele for arrastado
-          eventDrop: function(event, delta, revertFunc) {
-            $.ajax({
-              url: 'calendar_api.php',
-              type: 'POST',
-              data: JSON.stringify({
-                id: event.id,
-                title: event.title,
-                start: event.start.format(),
-                end: event.end ? event.end.format() : null, // Caso haja uma data de término
-                allDay: event.allDay,
-                backgroundColor: event.backgroundColor,
-                borderColor: event.borderColor
-              }),
-              contentType: 'application/json',
-              success: function(response) {
-                console.log("Evento atualizado com sucesso.");
-              },
-              error: function(xhr, status, error) {
-                revertFunc();
-                alert("Erro ao atualizar o evento.");
-              }
-            });
-          }
         });
-
-        // Adicionar evento do painel lateral
-        $('#add-new-event').click(function() {
-          var title = $('#new-event').val();
-          var color = $('#color-chooser li a').css('color');
-          if (title.length == 0) return;
-
-          var event = $('<div />');
-          event.text(title);
-          event.css('background-color', color);
-          $('#external-events').prepend(event);
-
-          ini_events(event);
-
-          $('#new-event').val('');
-        });
-      });
     </script>
-  </body>
+</body>
 </html>
