--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -97,33 +97,30 @@
                         }
                     });
                 },
-drop: function(date, allDay) {
-    var originalEventObject = $(this).data('eventObject');
-    var copiedEventObject = {
-        title: originalEventObject.title,
-        start: date.format(),
-        end: allDay ? date.add(1, 'days').format() : date.add(3, 'hours').format(), // Para eventos de um dia, adiciona um dia ao 'end'
-        allDay: allDay,
-        backgroundColor: $(this).css("background-color"),
-        borderColor: $(this).css("border-color")
-    };
+                drop: function(date, allDay) {
+                    var originalEventObject = $(this).data('eventObject');
+                    var copiedEventObject = {
+                        title: originalEventObject.title,
+                        start: date.format(),
+                        allDay: allDay,
+                        backgroundColor: $(this).css("background-color"),
+                        borderColor: $(this).css("border-color")
+                    };
 
-    console.log("Evento copiado:", copiedEventObject);
-
-    $.ajax({
-        url: 'calendar_api.php',
-        type: 'POST',
-        data: JSON.stringify(copiedEventObject),
-        contentType: 'application/json',
-        success: function(response) {
-            copiedEventObject.id = response.id;
-            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-        },
-        error: function(xhr, status, error) {
-            alert("Erro ao adicionar evento.");
-        }
-    });
-},
+                    $.ajax({
+                        url: 'calendar_api.php',
+                        type: 'POST',
+                        data: JSON.stringify(copiedEventObject),
+                        contentType: 'application/json',
+                        success: function(response) {
+                            copiedEventObject.id = response.id;
+                            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
+                        },
+                        error: function(xhr, status, error) {
+                            alert("Erro ao adicionar evento.");
+                        }
+                    });
+                },
                 eventDrop: function(event, delta, revertFunc) {
                     $.ajax({
                         url: 'calendar_api.php',
@@ -140,7 +137,29 @@ drop: function(date, allDay) {
                         contentType: 'application/json',
                         success: function(response) {
                             console.log("Evento atualizado com sucesso.");
-                            console.log("Evento atualizado com sucesso. Atualização "+event.end);
+                        },
+                        error: function(xhr, status, error) {
+                            revertFunc();
+                            alert("Erro ao atualizar o evento.");
+                        }
+                    });
+                },
+                eventResize: function(event, delta, revertFunc) {
+                    $.ajax({
+                        url: 'calendar_api.php',
+                        type: 'POST',
+                        data: JSON.stringify({
+                            id: event.id,
+                            title: event.title,
+                            start: event.start.format(),
+                            end: event.end.format(),  // Enviando a data de término atualizada
+                            allDay: event.allDay,
+                            backgroundColor: event.backgroundColor,
+                            borderColor: event.borderColor
+                        }),
+                        contentType: 'application/json',
+                        success: function(response) {
+                            console.log("Evento atualizado com sucesso.");
                         },
                         error: function(xhr, status, error) {
                             revertFunc();
