--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -95,9 +95,11 @@
                     success: function(data) {
                         var events = data.map(function(event) {
                             // Garantir que o FullCalendar consiga interpretar as datas corretamente
-                            event.start = moment(event.start).format(); // Garantir que o formato esteja correto
+                            //event.start = moment(event.start).format(); // Garantir que o formato esteja correto
+                            event.start = moment(event.start).format('YYYY-MM-DD HH:mm:ss');  // Remover fuso horário
                             if (event.end) {
-                                event.end = moment(event.end).format(); // Certificar que o formato de 'end' esteja correto
+                               // event.end = moment(event.end).format(); // Certificar que o formato de 'end' esteja correto
+                                event.end = moment(event.end).format('YYYY-MM-DD HH:mm:ss');  // Remover fuso horário
                                 console.log("Evento end. "+event.end);
                             }
                             return event;
