--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -158,6 +158,19 @@
                 });
             },
             eventResize: function(event, delta, revertFunc) {
+   // Exibe o objeto que será enviado para o servidor
+    var eventData = {
+        id: event.id,
+        title: event.title,
+        start: event.start.format(),  // Formato da data de início
+        end: event.end.format(),      // Formato da data de término
+        allDay: event.allDay,
+        backgroundColor: event.backgroundColor,
+        borderColor: event.borderColor
+    };
+    
+    console.log("Dados enviados para o servidor (eventResize):", eventData);
+                
                 $.ajax({
                     url: 'calendar_api.php',
                     type: 'POST',
