--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            padding: 10px 0;
+            padding: 8px 0;
         }
 
         /* Estilo dos itens da barra (ícones e textos) */
@@ -29,14 +29,14 @@
             text-decoration: none;
             display: flex;
             align-items: center;
-            font-size: 18px;
+            font-size: 14px; /* Texto menor */
         }
 
         /* Cor dos ícones */
         .navbar a i {
             color: red;
-            font-size: 20px; /* ícones menores */
-            margin-right: 10px; /* espaço entre o ícone e o texto */
+            font-size: 16px; /* Ícones menores */
+            margin-right: 8px; /* Espaço entre o ícone e o texto */
         }
 
         /* Efeito hover nos links */
