--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -8,19 +8,21 @@
     <style>
         /* Estilo geral da página */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
         }
 
         /* Estilo da barra superior */
         .navbar {
             background-color: #333;
             display: flex;
-            justify-content: space-evenly;
+            justify-content: center;
             align-items: center;
-            padding: 8px 0;
+            padding: 10px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         /* Estilo dos itens da barra (ícones e textos) */
@@ -29,19 +31,27 @@
             text-decoration: none;
             display: flex;
             align-items: center;
-            font-size: 14px; /* Texto menor */
+            font-size: 13px; /* Texto ainda mais suave */
+            margin: 0 15px; /* Espaçamento mais suave */
+            transition: all 0.3s ease-in-out; /* Transição suave */
         }
 
         /* Cor dos ícones */
         .navbar a i {
-            color: red;
-            font-size: 16px; /* Ícones menores */
-            margin-right: 8px; /* Espaço entre o ícone e o texto */
+            color: #e74c3c; /* Vermelho suave */
+            font-size: 18px; /* Ícones suaves */
+            margin-right: 6px; /* Menos espaço entre ícone e texto */
+            transition: all 0.3s ease-in-out; /* Transição suave para hover */
         }
 
         /* Efeito hover nos links */
         .navbar a:hover {
-            opacity: 0.7;
+            opacity: 0.8;
+            transform: scale(1.1); /* Leve aumento de tamanho */
+        }
+
+        .navbar a:hover i {
+            color: #c0392b; /* Vermelho mais intenso no hover */
         }
 
         /* Estilo dos iframes */
@@ -50,6 +60,8 @@
             height: 500px;
             border: none;
             margin-top: 20px;
+            border-radius: 8px; /* Bordas arredondadas */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
